create Person class

--- a/TODO
+++ b/TODO
@@ -2,4 +2,4 @@ TODO
 
 [ X ] create a Makefile for building a application
 [ X ] replace a fix array by vector*
-[ ] Create a Person class
+[ X ] Create a Person class
